--- a/font.css
+++ b/font.css
@@ -31,7 +31,7 @@ height: 100px;
 .forth-div{
     background-color:black;
     width: 100%;
-height: 300px;
+    height: 300px;
 }
 .li
 {
@@ -85,7 +85,7 @@ align-items: center;
     background-color:rgb(241, 43, 8);
     width: 100px;
     height: 50px;
-border-radius: 30px;
+     border-radius: 30px;
 }
 #logo{
     width: 400px;
@@ -180,4 +180,25 @@ left: 40%;
     position: absolute;
     top: 800px;
     left: 75%;
+}
+.img{
+    display: flex;
+    list-style-type: none;
+    position: absolute;
+    top: 720px;
+}
+.img li{
+    padding: 10px;
+}
+img{
+    width: 120px;
+    height: 50px;
+    
+    
+}
+#more{
+    width: 120px;
+    height: 50px;
+    border: white solid 1px;
+    border-radius: 10px;
 }
